เพิ่ม controller adminrepair - close #31
